--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-    //implementation 'androidx.fragment:fragment-ktx:1.0.0'
+    implementation 'androidx.fragment:fragment-ktx:1.0.0'
 
     implementation "com.google.dagger:dagger:2.21"
     kapt "com.google.dagger:dagger-compiler:2.21"
